--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,8 @@
 				</executions>
 
 				<configuration>
-					<imageName>fbernardino-hello</imageName>
-					<baseImage>java</baseImage>
-					<entryPoint>["java", "-jar", "/${project.build.finalName}.jar"]</entryPoint>
+					<imageName>fbernardino-build-test</imageName>
+					<dockerDirectory>.</dockerDirectory>
 					<imageTags>
 						<imageTag>${project.version}</imageTag>
 						<imageTag>latest</imageTag>
